fixed alignment in  pricing section.

--- a/css/style.css
+++ b/css/style.css
@@ -50,11 +50,11 @@ footer{
 }
 /*utils*/
 .container-big {
-    max-width: 1000px;
+    max-width: 1200px;
     margin: 0 auto;
 }
 .container-small {
-    max-width: 800px;
+    max-width: 1000px;
     margin: 0 auto;
 }
 .flex {
@@ -174,6 +174,13 @@ footer{
     display: inline-flex;
     align-items: center;
     gap: 10px;
+    margin-right: 20px;
+    margin-bottom: 50px;
+}
+.aligned-with-mg {
+    text-align: left;
+    margin-left: 40px;
+    margin-right: 40px;
 }
 .price {
     font-weight: 700;
@@ -187,6 +194,11 @@ footer{
     text-align: left;
     margin: 40px;
 }
+.feature li {
+    display: flex;
+    gap: 10px;
+    align-items: baseline;
+}
 main li {
     margin-bottom: 30px;
 }
@@ -197,7 +209,6 @@ main a {
     border-bottom: 1px solid black;
 }
 .underscore {
-
    height:20px;
    width:50px;
    background-color:white;
@@ -272,9 +283,14 @@ footer li {
 .mb-30 {
     margin-bottom: 30px;
 }
+.mr-10 {
+    margin-right: 10px;
+}
 
 .pd-5-10 {
     padding: 5px 10px;
 }
-
+ .pd-10 {
+    padding: 10px;
+ }
 
